--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Score keeper</title>
-
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+		/>
 		<style>
 			.winner {
 				color: green;
@@ -13,26 +16,80 @@
 			.loser {
 				color: red;
 			}
+			#scoreKeeperImg {
+				width: 300px;
+				height: 300px;
+				margin: 0 auto;
+			}
 		</style>
 	</head>
 	<body>
-		<h1><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
-		<select name="noOfRounds" id="roundNumber">
-			<option value="3">3</option>
-			<option value="4">4</option>
-			<option value="5">5</option>
-			<option value="6">6</option>
-			<option value="7">7</option>
-			<option value="8">8</option>
-			<option value="9">9</option>
-			<option value="3">10</option>
-			<option value="11">11</option>
-			<option value="13">13</option>
-			<option value="15">15</option>
-		</select>
-		<button id="p1Button">+1 PLAYER 1</button>
-		<button id="p2Button">+1 PLAYER 2</button>
-		<button id="resetButton">Reset</button>
+		<section class="section">
+			<div class="container">
+				<div class="column is-half is-offset-one-quarter">
+					<div class="card">
+						<div class="card-image">
+							<figure class="image">
+								<img
+									id="scoreKeeperImg"
+									src="https://st2.depositphotos.com/33945136/42042/v/600/depositphotos_420420720-stock-illustration-icon-scoreboard-sports-score-flat.jpg"
+									alt="image of score keeper"
+								/>
+							</figure>
+						</div>
+						<header class="card-header">
+							<p class="card-header-title">Score keeper</p>
+							<button class="card-header-icon" aria-label="more options">
+								<span class="icon">
+									<i class="fas fa-angle-down" aria-hidden="true"></i>
+								</span>
+							</button>
+						</header>
+						<div class="card-content">
+							<div class="content">
+								<h1 class="title is-1">
+									<span id="p1Display">0</span> to <span id="p2Display">0</span>
+								</h1>
+								<p class="subtitle">Use the buttons below to keep score.</p>
+							</div>
+							<label for="roundNumber" class="label is-medium is-inline">
+								No of rounds
+							</label>
+							<div class="select is-rounded is-small">
+								<select name="noOfRounds" id="roundNumber">
+									<option value="3">3</option>
+									<option value="4">4</option>
+									<option value="5">5</option>
+									<option value="6">6</option>
+									<option value="7">7</option>
+									<option value="8">8</option>
+									<option value="9">9</option>
+									<option value="3">10</option>
+									<option value="11">11</option>
+									<option value="13">13</option>
+									<option value="15">15</option>
+								</select>
+							</div>
+						</div>
+						<footer class="card-footer">
+							<button id="p1Button" class="button is-primary card-footer-item">
+								+1 PLAYER 1
+							</button>
+							<button id="p2Button" class="button is-link card-footer-item">
+								+1 PLAYER 2
+							</button>
+							<button
+								id="resetButton"
+								class="button is-danger card-footer-item"
+							>
+								Reset
+							</button>
+						</footer>
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<script src="app.js"></script>
 	</body>
 </html>
