added win message

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		/>
 		<style>
 			#scoreKeeperImg {
-				width: 300px;
-				height: 300px;
+				width: 250px;
+				height: 250px;
 				margin: 0 auto;
 			}
 		</style>
@@ -44,7 +44,9 @@
 								<h1 class="title is-1">
 									<span id="p1Display">0</span> to <span id="p2Display">0</span>
 								</h1>
-								<p class="subtitle">Use the buttons below to keep score.</p>
+								<p class="subtitle has-text-weight-bold" id="result">
+									Use the buttons below to keep score.
+								</p>
 							</div>
 							<label for="roundNumber" class="label is-medium is-inline">
 								No of rounds
